--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
           id="button-group"
           class="grid grid-cols-1 md:grid-cols-5 gap-4 max-w-5xl mx-auto"
         >
-          <button class="button px-6 py-3 text-white" id="popcorn">
+          <button class="button px-6 py-3 text-white bg-blue-500" id="popcorn">
             🍿 Popcorn: $4.50
           </button>
-          <button class="button px-6 py-3 text-white" id="soda">
+          <button class="button px-6 py-3 text-white bg-blue-500" id="soda">
             🥤 Soda: $2.50
           </button>
-          <button class="button px-6 py-3 text-white" id="candy">
+          <button class="button px-6 py-3 text-white bg-blue-500" id="candy">
             🍬 Candy: $1.75
           </button>
-          <button class="button px-6 py-3 text-white" id="nachos">
+          <button class="button px-6 py-3 text-white bg-blue-500" id="nachos">
             🧀 Nachos: $5.00
           </button>
-          <button class="button px-6 py-3 text-white" id="icecream">
+          <button class="button px-6 py-3 text-white bg-blue-500" id="icecream">
             🍦 Ice Cream: $3.25
           </button>
         </div>
